Adds empty database project.

--- a/src/Kayn.Core/Kayn.Core.csproj
+++ b/src/Kayn.Core/Kayn.Core.csproj
@@ -18,4 +18,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Kayn.Data\Kayn.Data.csproj" />
+    </ItemGroup>
+
 </Project>
